lib/flux/apps/servarr/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
